namespaces/live.cloud-platform.service.justice.gov.uk/moj-copilot-ai-credits-dashboard-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "moj-copilot-ai-credits-dashboard-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-optimisation-and-accountability-team"
    cloud-platform.justice.gov.uk/application: "Dashboard to visualise GitHub CoPilot usage"
    cloud-platform.justice.gov.uk/owner: "COAT: cloudoptimisationandaccountabilityteam@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/moj-copilot-ai-credits-dashboard"
    cloud-platform.justice.gov.uk/team-name: "cloud-optimisation-and-accountability"
    cloud-platform.justice.gov.uk/review-after: ""
